examples/test/testpolicy17818.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17818
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key26: value18
      key44: value45
      key9: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value45
          key30: value17
          key1: value48
